--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "artnaicode-movie",
+  "name": "artnaicode-netflix",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.25.0",
+    "movie-trailer": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-youtube": "^7.14.0",
+    "swiper": "^8.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
