--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "movie-trailer": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "react-youtube": "^7.14.0",
     "swiper": "^8.0.6",
